# anime-recommender-demo

./: README.md
infra/: .terraform.lock.hcl  backend.tf  base.tf  bastion.tf  lambda.tf  opensearch.tf  provider.tf  security.tf
local/: .env  docker-compose.yml  index_spec.json  opensearch_setup.py  run_indexer.py  run_poller.py  useful_queries.txt
src/indexer/: app.py  pyproject.toml  requirements.txt
src/indexer/f_indexer/: __main__.py  config.py  namespace.py  opensearch.py  source.py
src/poller/: app.py  pyproject.toml  requirements.txt
src/poller/f_poller/: __main__.py  config.py  namespace.py  sink.py  utils.py
